--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-setuptools>=56.0.0
-wheel>=0.36.2
-scikit-learn==1.0.2
-nltk==3.9.1
-pandas==1.3.3
-numpy==1.21.2
+setuptools
+wheel
+scikit-learn
+nltk
+pandas
+numpy
