--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "scripts/ml_question_recommender.py",
       "use": "@vercel/python",
       "config": {
-        "maxDuration": 10
+        "pythonVersion": "3.9"
       }
     }
   ],
